--- a/src/Templates/subscriptions/create.html
+++ b/src/Templates/subscriptions/create.html
@@ -17,7 +17,7 @@
 
     {{form}}
     <div class="text-center">
-        <input class="btn btn-dark px-3 my-2" type="submit" value="Register">
+        <input class="btn btn-dark px-3 my-2" type="submit" value="Create">
     </div>
 </form>
 {% endblock %}
