--- a/src/Templates/main/about.html
+++ b/src/Templates/main/about.html
@@ -3,6 +3,9 @@
 {% block title %}About{% endblock %}
 {% block content %}
 
-about page
+<img class="rounded-circle" src="{% static 'images/founder.jpg' %}" width="250" height="250">
+<p>Matthew Palmer</p>
+<p>Director of Steel Systems Limited</p>
+<p>Matthew.Palmer@steelsystems.uk</p>
 
 {% endblock %}
