--- a/src/Templates/base.html
+++ b/src/Templates/base.html
@@ -18,7 +18,8 @@
             <div class="container py-1">
                 <a class="navbar-brand" href="{% url 'index' %}">
                     <i class="bi bi-piggy-bank-fill me-1"></i>
-                    PriceCare</a>
+                    PriceCare
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
