--- a/src/Templates/base.html
+++ b/src/Templates/base.html
@@ -72,4 +72,9 @@
         </div>
         <script src="{% static 'js/base.js' %}"></script>
     </body>
+
+    <!--<footer class="footer">
+        &copy; 2020 PriceCare. All rights reserved.
+    </footer>
+-->
 </html>
