--- a/src/Templates/subscriptions/dashboard.html
+++ b/src/Templates/subscriptions/dashboard.html
@@ -16,9 +16,14 @@
         My Subscriptions 
         <span class="badge text-bg-dark">{{subscriptions.count}}</span>
     </span>
-    <a class="btn btn-success px-4 fs-6" href="{% url 'subs_create' %}">
-        <i class="bi bi-plus me-1"></i>Add Subscription
-    </a>  
+    <span>
+        <a href="{% url 'subs_download' %}" class="btn btn-primary px-4 fs-6">
+            <i class="bi bi-download me-2"></i>Download
+        </a>
+        <a class="btn btn-success px-4 fs-6" href="{% url 'subs_create' %}">
+            <i class="bi bi-plus me-1"></i>Add
+        </a>  
+    </span>
 </div>
 
 
