--- a/src/Templates/base.html
+++ b/src/Templates/base.html
@@ -7,7 +7,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-        <link rel="shortcut icon" type="image/png" href="{% static 'images/logo/logo.ico' %}"/>
+        <link rel="shortcut icon" type="image/ico" href="{% static 'images/misc/logo_tab.ico' %}"/>
         <meta charset=utf-8 />
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <meta charset="UTF-8">
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-primary">
             <div class="container py-1">
                 <a class="navbar-brand" href="{% url 'index' %}">
-                    <i class="bi bi-piggy-bank-fill me-1"></i>
+                    <img src="{% static 'images/misc/logo.png' %}" width="30" height="30" class="d-inline-block align-top me-1" alt="">
                     PriceCare
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +35,7 @@
                             <a class="nav-link {% if request.resolver_match.url_name == 'contact' %}active{% endif %}" href="{% url 'contact' %}">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if 'subs_' in request.resolver_match.url_name %}active{% endif %}" href="{% url 'subs_dashboard' %}">Subscriptions</a>
+                            <a class="nav-link {% if 'subs_' in request.resolver_match.url_name %}active{% endif %}{% if not user.is_authenticated %}disabled{% endif %}" href="{% url 'subs_dashboard' %}">Subscriptions</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
