--- a/src/Templates/users/view.html
+++ b/src/Templates/users/view.html
@@ -5,7 +5,7 @@
 
 {% if messages %}
     {% for message in messages %}
-    <div class="alert alert-{{ message.extra_tags }} m-1">
+    <div class="alert alert-{{ message.extra_tags }} m-1 mb-3">
         <span>{{ message }}</span>
     </div>
     {% endfor %}
