--- a/src/Templates/users/change_details.html
+++ b/src/Templates/users/change_details.html
@@ -26,7 +26,8 @@
     </span>
 
     <div class="text-center">
-        <input class="btn btn-dark px-3 my-2" type="submit" value="Register">
+        <a class="btn btn-primary px-3 my-2" href="{% url 'users_profile' %}">Back</a>
+        <input class="btn btn-dark px-3 my-2" type="submit" value="Change Details">
     </div>
 </form>
 {% endblock %}
