--- a/src/Templates/support/create.html
+++ b/src/Templates/support/create.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Log In{% endblock %}
+{% block title %}Create Support Ticket{% endblock %}
 {% block content %}
 
 {% if messages %}
@@ -12,7 +12,7 @@
 {% endif %}
 
 <form method="post" class="form-vertical my-2" enctype='multipart/form-data'>
-    <p class="fs-3 fw-bold text-center">Create a New Account</p>
+    <p class="fs-3 fw-bold text-center">Create a Support Ticket</p>
     {% csrf_token %}
 
     {{form.subject}}
@@ -20,7 +20,8 @@
     {{form.file}}
 
     <div class="text-center">
-        <input class="btn btn-dark px-3 my-2" type="submit" value="Register">
+        <a class="btn btn-primary px-3 my-2" href="{% url 'users_support' %}">Back</a>
+        <input class="btn btn-dark px-3 my-2" type="submit" value="Create Ticket">
     </div>
 </form>
 {% endblock %}
