--- a/src/Templates/users/change_password.html
+++ b/src/Templates/users/change_password.html
@@ -12,14 +12,15 @@
 {% endif %}
 
 <form method="post" class="form-vertical my-2" enctype='multipart/form-data'>
-    <p class="fs-3 fw-bold text-center">Change Account Details</p>
+    <p class="fs-3 fw-bold text-center">Change Password</p>
     {% csrf_token %}
 
     {{form.old_password}}
     {{form.new_password1}}
     {{form.new_password2}}
     <div class="text-center">
-        <input class="btn btn-dark px-3 my-2" type="submit" value="Register">
+        <a class="btn btn-primary px-3 my-2" href="{% url 'users_profile' %}">Back</a>
+        <input class="btn btn-dark px-3 my-2" type="submit" value="Change Password">
     </div>
 </form>
 {% endblock %}
