--- a/src/Templates/main/about.html
+++ b/src/Templates/main/about.html
@@ -3,9 +3,13 @@
 {% block title %}About{% endblock %}
 {% block content %}
 
-<img class="rounded-circle" src="{% static 'images/founder.jpg' %}" width="250" height="250">
+<img class="rounded-circle" src="{% static 'images/misc/founder.jpg' %}" width="250" height="250">
 <p>Matthew Palmer</p>
 <p>Director of Steel Systems Limited</p>
 <p>Matthew.Palmer@steelsystems.uk</p>
+
+Founded in 2022, Steel Systems Limited is a UK-based company that provides a range of digital services.
+
+PriceCare allows users to create and manage their own subscriptions, and also allows them to view the prices of the products they have subscribed to.
 
 {% endblock %}
