--- a/src/Templates/main/index.html
+++ b/src/Templates/main/index.html
@@ -11,6 +11,47 @@
     {% endfor %}
 {% endif %}
 
-Price Care
-When Price Matters 
+<div class="text-center">
+    <div class="my-5">
+        <h1 class="display-1 fw-bold">PriceCare</h1>
+        <h3 class="lead">When Price Matters</h3> 
+    </div>
+    <div class="row row-cols-1 row-cols-lg-3">
+        <div class="col">
+            <div class="card border-primary">
+                <img class="card-img-top" src="{% static 'images/misc/index_image_1.png' %}" alt="Card image cap" width="200" height="300">
+                <div class="card-body">
+                    <h5 class="card-title">Calculate How Much You Spend</h5>
+                    <p class="card-text">
+                        Calculate how much you spend on your subscriptions and how much you can save.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card border-primary">
+                <img class="card-img-top" src="{% static 'images/misc/index_image_2.png' %}" alt="Card image cap" width="200" height="300">
+                <div class="card-body">
+                <h5 class="card-title">Control Your Finances</h5>
+                <p class="card-text">
+                    Control your finances and make sure you are spending the right amount.
+                </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card border-primary">
+                <img class="card-img-top" src="{% static 'images/misc/index_image_3.png' %}" alt="Card image cap" width="200" height="300">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Keep Track of Your Spending
+                    </h5>
+                    <p class="card-text">
+                        Keep track of your spending and make sure you are spending the right amount.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
