--- a/src/Templates/subscriptions/dashboard.html
+++ b/src/Templates/subscriptions/dashboard.html
@@ -94,4 +94,17 @@
         </tbody>
     </table>
 {% endif %}
+
+<div class="modal fade" id="download_statement" tabindex="-1" aria-labelledby="download_statement_label" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
