--- a/src/Templates/base.html
+++ b/src/Templates/base.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
         <link rel="shortcut icon" type="image/ico" href="{% static 'images/misc/logo_tab.ico' %}"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <meta charset=utf-8 />
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <meta charset="UTF-8">
@@ -72,9 +73,4 @@
         </div>
         <script src="{% static 'js/base.js' %}"></script>
     </body>
-
-    <!--<footer class="footer">
-        &copy; 2020 PriceCare. All rights reserved.
-    </footer>
--->
 </html>
